<resources>
    <string name="app_name" translatable="false">CalcuLegor</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="calcolatrice">Calculator</string>
    <string name="condividi">Share</string>
    <string name="invia">Send</string>
    <string name="write_expression">Write the expression</string>
    <string name="key_audio_robot">Enable/disable printer audio</string>
    <string name="key_vibrazione">Enable/disable phone vibration</string>
    <string name="key_permessi">Enable system permission</string>
    <string name="key_connesso">Connected</string>
    <string name="key_disconnesso">Disconnected</string>
    <string name="key_connetti">Connect</string>
    <string name="key_disconnetti">Disconnect</string>
    <string name="key_connection_error">Connection error</string>
    <string name="key_error">Error</string>
    <string name="key_bluetooth_supporto">Bluetooth not supported</string>
    <string name="key_telefono_supporto">Your phone does not support Bluetooth.</string>
    <string name="key_bluetooth_disabilitato">Bluetooth not enabled</string>
    <string name="key_attiva_bluetooth">Bluetooth is disabled. Enable it and retry.</string>
    <string name="key_scegli_dispositivo">Select an EV3 device</string>
    <string name="key_click_procedere">Enable/disable click to procede on the printer.</string>
    <string name="key_connect_and_disconnect">The changes will be applied at the next reconnection</string>
    <string name="key_benvenuto">Welcome to CalcuLegor!</string>
    <string name="key_titolo_seconda_slide">"Use your CalcuLegor EV3 printer! "</string>
    <string name="key_descrizione_seconda_slide">"Learn to solve complex expressions thanks to step by step resolution! "</string>
    <string name="key_titolo_terza_slide">"...but we need some authorization... "</string>
    <string name="key_descrizione_terza_slide">For a better user experience, accept the requests that we would propose.</string>
    <string name="key_qualcosa_storto">Something went wrong.</string>
    <string name="key_comunicazione">Communicate</string>
    <string name="key_device_non_presente">If the EV3 is not present, open the bluetooth settings and perform the pairing.</string>
    <string name="linkCondividi">Try CalcuLegor for Lego EV3 MindStorm! Is fantastic! Google Play:</string>
</resources>
