<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <Switch
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/audio"
        android:text="@string/key_audio_robot"/>

    <Switch
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vibrazione"
        android:text="@string/key_vibrazione"/>

    <Switch
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clickProcedere"
        android:text="@string/key_click_procedere"/>

</LinearLayout>